Remove >100MB files & update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ xing/4/LuminLeaf-Video.mp4
 xing/3/Studio Final Report.pdf
 xing/4/LuminLeaf-Video.mp4
 *.mp4
+xing/3/Studio Final Report.pdf
+xing/4/LuminLeaf-Video.mp4
+*.mp4
